--- a/crates/ironrdp-web/Cargo.toml
+++ b/crates/ironrdp-web/Cargo.toml
@@ -35,6 +35,7 @@ ironrdp = { path = "../ironrdp", features = [
     "svc",
     "displaycontrol",
     "pdu",
+    "rdpsnd",
 ] }
 ironrdp-core.path = "../ironrdp-core"
 ironrdp-cliprdr-format.path = "../ironrdp-cliprdr-format"
@@ -47,7 +48,23 @@ iron-remote-desktop.path = "../iron-remote-desktop"
 # WASM
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
-web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
+web-sys = { version = "0.3", features = [
+    "HtmlCanvasElement",
+    "AudioContext",
+    "AudioBuffer",
+    "AudioBufferSourceNode",
+    "AudioDestinationNode",
+    "AudioNode",
+    "GainNode",
+    "AudioParam",
+    "AudioContextState",
+    "BaseAudioContext",
+    "EventTarget",
+    "Event",
+    "Document",
+    "Window",
+    "Navigator",
+] }
 js-sys = "0.3"
 gloo-net = { version = "0.6", default-features = false, features = ["websocket", "http", "io-util"] }
 gloo-timers = { version = "0.3", default-features = false, features = ["futures"] }
